tests/error/compiletime_error_undeclared_variable_in_solution/identity.nim
func identity*(n: int): int =
  myUndeclaredVariable = 5
